# jsonapis.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/: builders.rs  client.rs
src/: client.rs  fixtures.rs  lib.rs
src/builders/: data.rs  document.rs  error.rs  error_object.rs  error_source.rs  jsonapi.rs  link.rs  links.rs  meta_or_attrs.rs  mod.rs  relationship.rs  relationships.rs  resource.rs
src/entities/: data.rs  document.rs  error.rs  error_object.rs  error_source.rs  errors.rs  http_status.rs  jsonapi.rs  link.rs  link_object.rs  links.rs  meta_or_attrs.rs  mod.rs  relationship.rs  relationships.rs  resource.rs  version.rs
