[package]
name = "jsonapis"
version = "0.0.4"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2018"
description = "JSON:API library for Rust"
readme = true
homepage = "https://github.com/kotovalexarian/jsonapis.rs"
repository = "https://github.com/kotovalexarian/jsonapis.rs.git"
license = "MIT"
keywords = ["api", "deserialization", "json", "serialization", "jsonapi"]
categories = ["web-programming"]
publish = true

[dependencies]
regex = "1.5.4"
reqwest = "0.9.24"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
