[package]
name = "jsonapis"
version = "0.0.6"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2021"
description = "JSON:API library for Rust"
readme = true
homepage = "https://github.com/kotovalexarian/jsonapis.rs"
repository = "https://github.com/kotovalexarian/jsonapis.rs.git"
license = "MIT"
keywords = ["api", "deserialization", "json", "serialization", "jsonapi"]
categories = ["web-programming"]
publish = true

[features]
default = ["client"]
client = ["reqwest", "url"]

[dependencies]
regex = "1.5.4"
reqwest = { version = "0.11.4", optional = true, features = ["blocking", "json"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
url = { version = "2.2.2", optional = true }
