[package]
name = "jsonapis"
version = "0.0.7"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2021"
description = "JSON:API library for Rust"
readme = true
homepage = "https://github.com/kotovalexarian/jsonapis.rs"
repository = "https://github.com/kotovalexarian/jsonapis.rs.git"
license = "MIT"
keywords = ["api", "deserialization", "json", "serialization", "jsonapi"]
categories = ["web-programming"]
publish = true

[features]
default = ["client"]
client = ["reqwest", "url"]

[dependencies]
http = "0.2.8"
regex = "1.6.0"
reqwest = { version = "0.11.11", optional = true, features = ["blocking", "json"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
url = { version = "2.2.2", optional = true }
